@@ -1,0 +1,24 @@
+// Copyright 2002-2011, University of Colorado
+package edu.colorado.phet.molarity;
+
+import edu.colorado.phet.chemistry.utils.ChemUtils;
+import edu.colorado.phet.molarity.MolarityResources.Strings;
+
+/**
+ * Universal symbols, no i18n required.
+ *
+ * @author Chris Malley (cmalley@pixelzoom.com)
+ */
+public class MolaritySymbols {
+
+    public static final String COBALT_II_NITRATE = ChemUtils.toSubscript( "Co(NO3)2" );
+    public static final String COBALT_CHLORIDE = ChemUtils.toSubscript( "CoCl2" );
+    public static final String COPPER_SULFATE = ChemUtils.toSubscript( "CuSO4" );
+    public static final String GOLD_III_CHLORIDE = ChemUtils.toSubscript( "AuCl3" );
+    public static final String KOOL_AID = Strings.KOOL_AID;
+    public static final String NICKEL_II_CHLORIDE = ChemUtils.toSubscript( "NiCl2" );
+    public static final String POTASSIUM_CHROMATE = ChemUtils.toSubscript( "K2CrO4" );
+    public static final String POTASSIUM_DICHROMATE = ChemUtils.toSubscript( "K2Cr2O7" );
+    public static final String POTASSIUM_PERMANGANATE = ChemUtils.toSubscript( "KMnO4" );
+    public static final String WATER = ChemUtils.toSubscript( "H2O" );
+}
